hello-kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - test1.luishmed.online
    - test2.luishmed.online
    secretName: hello-kubernetes-tls
  rules:
  - host: test1.luishmed.online
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: test2.luishmed.online
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
